Bug 305788 - Current git build fails on Kubuntu 12.10 due to lastfm
Summary: Current git build fails on Kubuntu 12.10 due to lastfm
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Services/Last.fm (other bugs)
Version First Reported In: 2.6-git
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-25 21:58 UTC by Dominic Laumer
Modified: 2012-08-25 22:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dominic Laumer 2012-08-25 21:58:32 UTC
While building amarok from git with lastfm-support under Kubuntu 12.10 (up to date, amd64), following error comes up:

[ 94%] Building CXX object src/services/lastfm/CMakeFiles/amarok_service_lastfm.dir/amarok_service_lastfm_automoc.o
In file included from /home/flummi/src/amarok/build/src/services/lastfm/amarok_service_lastfm_automoc.cpp:4:0:
/home/flummi/src/amarok/build/src/services/lastfm/moc_LastFmTreeModel.cpp: In static member function ‘static void LastFmTreeModel::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)’:
/home/flummi/src/amarok/build/src/services/lastfm/moc_LastFmTreeModel.cpp:56:125: error: invalid use of incomplete type ‘class QPixmap’
In file included from /usr/include/qt4/QtCore/QMetaType:1:0,
                 from /home/flummi/src/amarok/src/core/meta/Meta.h:27,
                 from /home/flummi/src/amarok/build/src/services/lastfm/../../../../src/services/lastfm/LastFmTreeModel.h:22,
                 from /home/flummi/src/amarok/build/src/services/lastfm/moc_LastFmTreeModel.cpp:10,
                 from /home/flummi/src/amarok/build/src/services/lastfm/amarok_service_lastfm_automoc.cpp:4:
/usr/include/qt4/QtCore/qmetatype.h:320:7: error: forward declaration of ‘class QPixmap’
In file included from /home/flummi/src/amarok/build/src/services/lastfm/moc_LastFmTreeModel.cpp:10:0,
                 from /home/flummi/src/amarok/build/src/services/lastfm/amarok_service_lastfm_automoc.cpp:4:
/home/flummi/src/amarok/build/src/services/lastfm/../../../../src/services/lastfm/LastFmTreeModel.h:116:10: error:   initializing argument 2 of ‘void LastFmTreeModel::onAvatarDownloaded(const QString&, QPixmap)’

Including QPixmap in src/services/lastfm/LastFmTreeModel.h seems to fix it for me.
Comment 1 Sam Lade 2012-08-25 22:40:36 UTC
Git commit a315defed16b7437dfbae8f3c2359b6168d46f43 by Sam Lade.
Committed on 26/08/2012 at 00:38.
Pushed by lade into branch 'master'.

Fix lastfm build for some people

Some users, for reasons unknown, were getting QPixmap incomplete type
errors building the LastFm plugin.
FIXED-IN:2.7

M  +1    -0    src/services/lastfm/LastFmTreeModel.h

http://commits.kde.org/amarok/a315defed16b7437dfbae8f3c2359b6168d46f43