Fix lastfm build for some people

Some users, for reasons unknown, were getting QPixmap incomplete type
errors building the LastFm plugin.

BUG:305788
FIXED-IN:2.7