src/services/lastfm/LastFmTreeModel.h
@@ -23,6 +23,7 @@
 #include "WeightedStringList.h"
 
 #include <QAbstractItemModel>
+#include <QPixmap>
 
 #include <User.h>
 
